# simon

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Makefile  gui.c  gui.h  main.c  network.c  network.h  utils.c  utils.h
